# ansible_pydantic_formatting

./: .gitignore  README.md  pyproject.toml
ansible_pydantic_formatting/: __init__.py  main.py
